Schema updated, new seed data inserted in data.sql